<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="148dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="224dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnkeluar"
        app:cornerRadius="8sp"
        android:backgroundTint="#C50303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="238dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnbantuan"
        android:backgroundTint="#009688"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.00999999" />

    <Button
        android:id="@+id/button2"
        android:layout_width="238dp"
        android:layout_height="50dp"
        android:text="@string/btnpengaturan"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.088" />
</androidx.constraintlayout.widget.ConstraintLayout>